fix modals on mobile

--- a/sass/components/modals.scss
+++ b/sass/components/modals.scss
@@ -5,7 +5,7 @@ aside.js-modal:not(.drawer) {
     height: 100%;
     top: 0;
     left: 0;
-    margin-top: -100%;
+    margin-top: -100vh;
     align-items: center;
     justify-content: center;
     background-color: rgb(0 0 0 / 0%);
